create logic and db query for get profile
